src/whoami/oauth2/oauth2.yaml
# Usage:
# envsubst < oauth2.yaml | kubectl apply -f -
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
        - args:
            - --provider=oidc
            - --email-domain="*"
            - --http-address=0.0.0.0:4180
            - --client-id=${HOMEKUBE_OIDC_CLIENT_ID}
            - --client-secret=${HOMEKUBE_OAUTH2_CLIENT_SECRET}
            - --code-challenge-method=S256
            - --cookie-secret=${HOMEKUBE_OAUTH2_COOKIE_SECRET}
            - --cookie-expire=30m
            - --insecure-oidc-allow-unverified-email=true
            - --set-authorization-header=true
            - --oidc-issuer-url=${HOMEKUBE_OIDC_ISSUER}
            - --oidc-email-claim=email
            - --oidc-groups-claim=groups
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.6.0
          imagePullPolicy: Always
          name: oauth2-proxy
          ports:
            - containerPort: 4180
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: whoami
spec:
  ports:
    - name: http
      port: 4180
      protocol: TCP
      targetPort: 4180
  selector:
    k8s-app: oauth2-proxy
