src/whoami/oauth2/ingress-sso.yaml
# Usage:
# envsubst < ingress-sso.yaml | kubectl apply -f -
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-url: "https://whoami.${HOMEKUBE_DOMAIN}/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://whoami.${HOMEKUBE_DOMAIN}/oauth2/start"
    ## auth-response-headers not needed for whoami app but it comes in handy for Bearer inspection
    #nginx.ingress.kubernetes.io/auth-response-headers: >-
    #  X-Auth-Request-Email,X-Auth-Request-Preferred-,X-Auth-Request-Access-Token,
    #  X-Auth-Request-Roles,X-Auth-Request-User,X-Auth-Request-Groups,X-Forwarded-Groups,
    #  Authorization
  name: ingress-whoami
  namespace: whoami
spec:
  ingressClassName: nginx
  rules:
    - host: whoami.${HOMEKUBE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "256k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
  name: ingress-oauth2-whoami
  namespace: whoami
spec:
  ingressClassName: nginx
  rules:
    - host: whoami.${HOMEKUBE_DOMAIN}
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
